--- a/src/components/List.css
+++ b/src/components/List.css
@@ -1,3 +1,16 @@
 .list__container{
+    margin:10px;
+    background-color: aqua;
     display:block;
+}
+
+.pagination{
+    list-style: none;
+}
+
+.pagination__list{
+    display: inline-flex;
+    align-items: center;
+    vertical-align: middle;
+    list-style: none;
 }
