--- a/src/components/ListItem.css
+++ b/src/components/ListItem.css
@@ -3,9 +3,12 @@
     display:grid;
     padding: 24px 24px;
     width: 800px;
-    background-color: brown;
+    margin:10px;
+    border:solid 2px;
+    box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.2);
+    background-color: rgb(214, 207, 207);
     grid-template-columns: repeat(3,1fr);
-    grid-auto-rows: minmax(100px, auto);
+    grid-auto-rows: repeat(3,1fr);
     gap: 10px;
 }
 
@@ -17,4 +20,25 @@
 .listing__photos{
     grid-column: 1;
     background-color: azure;
+}
+
+.listing__section-price{
+    display:flex;
+    justify-content:flex-end;
+    align-items: center;
+}
+
+.listing__section-price p{
+    margin: 2px 10px;
+}
+
+.listing__section-price sup{
+    font-size: 0.5em;
+}
+
+.listing__list-info{
+    display:flex;
+    justify-content:flex-start;
+    align-items: center;
+    list-style: none;
 }
