--- a/src/components/SearchForm.css
+++ b/src/components/SearchForm.css
@@ -1,7 +1,8 @@
 .search__form{
+    position: sticky;
     display:flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px 10%;
-    background-color: rgb(219, 212, 115) ;
+    background-color: #8AC6D0 ;
 }
