--- a/src/components/List.css
+++ b/src/components/List.css
@@ -1,11 +1,16 @@
 .list__container{
-    margin:10px;
-    background-color: aqua;
-    display:block;
+    background-color: rgba(184, 243, 255,0.9);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
 
 .pagination{
     list-style: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .pagination__list{
@@ -13,4 +18,49 @@
     align-items: center;
     vertical-align: middle;
     list-style: none;
+}
+
+.pagination__list-btn{
+    width:2rem;
+    height: 2rem;
+    margin:10px 10px;
+    border-radius: 50%;
+    border: 2px solid white;
+    background-color: #554971;
+    color:white;
+    transition: all 0.3s ease 0s;
+    vertical-align: middle;
+}
+
+.pagination__list-btn > svg{
+    transition: all 0.3s ease 0s;
+    vertical-align: middle;
+    color:white;
+}
+.pagination__list-btn:hover,
+.pagination__list-btn:hover  svg{
+    color:#DAA520;
+}
+
+.pagination__list-btn:hover{
+    border: 2px solid #DAA520;
+}
+
+.pagination__list-btn:disabled{
+    background-color: #57555e;
+    border: 2px solid black;
+}
+
+.pagination__list >li:nth-child(3) button:nth-child(1){
+    width:1.8rem;
+    height: 1.8rem;
+}
+
+.pagination__list >li:nth-child(3) button:nth-child(3){
+    width:2.5rem;
+    height: 2.5rem;
+}
+
+.pagination__list >li:nth-child(3) button:nth-child(2){
+    background-color: aquamarine;
 }
