--- a/src/components/ListItem.css
+++ b/src/components/ListItem.css
@@ -3,13 +3,19 @@
     display:grid;
     padding: 24px 24px;
     width: 800px;
+    height: 250px;
     margin:10px;
-    border:solid 2px;
+    border-radius: 16px;
     box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.2);
     background-color: rgb(214, 207, 207);
     grid-template-columns: repeat(3,1fr);
     grid-auto-rows: repeat(3,1fr);
     gap: 10px;
+}
+
+.listing__item:hover{
+    transition: all 0.3s ease 0s;
+    box-shadow: 2px 2px 2px 2px rgba(218, 165, 32,0.2);
 }
 
 .listing__section{
