--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,5 +1,6 @@
 main{
     background-color: lightgray;
-    width: 100%;
-    height: 100%;
+    position: relative;
+    z-index: -1;
+    top:200px;
 }
