--- a/src/components/List.css
+++ b/src/components/List.css
@@ -1,66 +1,107 @@
-.list__container{
-    background-color: rgba(184, 243, 255,0.9);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.section__main{
+  display: block;
 }
 
-
-.pagination{
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+.list__container {
+  background-color: rgba(184, 243, 255, 0.9);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.pagination__list{
-    display: inline-flex;
-    align-items: center;
-    vertical-align: middle;
-    list-style: none;
+.pagination {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background: linear-gradient(#fff, rgba(99, 118, 141, 1));
 }
 
-.pagination__list-btn{
-    width:2rem;
-    height: 2rem;
-    margin:10px 10px;
-    border-radius: 50%;
-    border: 2px solid white;
-    background-color: #554971;
-    color:white;
-    transition: all 0.3s ease 0s;
-    vertical-align: middle;
+.pagination__list {
+  display: inline-flex;
+  align-items: center;
+  vertical-align: middle;
+  list-style: none;
 }
 
-.pagination__list-btn > svg{
-    transition: all 0.3s ease 0s;
-    vertical-align: middle;
-    color:white;
+.pagination__list-btn {
+  width: 2rem;
+  height: 2rem;
+  margin: 10px 10px;
+  border-radius: 50%;
+  border: 2px solid white;
+  background-color: #554971;
+  color: white;
+  transition: all 0.3s ease 0s;
+  vertical-align: middle;
+  font-weight:600;
+  cursor: pointer;
+  user-select: none;
+}
+
+.pagination__list-btn > svg {
+  transition: all 0.3s ease 0s;
+  vertical-align: middle;
+  color: white;
 }
 .pagination__list-btn:hover,
-.pagination__list-btn:hover  svg{
-    color:#DAA520;
+.pagination__list-btn:hover svg {
+  color: #daa520;
 }
 
-.pagination__list-btn:hover{
-    border: 2px solid #DAA520;
+.pagination__list-btn:hover {
+  border: 2px solid #daa520;
 }
 
-.pagination__list-btn:disabled{
-    background-color: #57555e;
-    border: 2px solid black;
+.pagination__list-btn:disabled {
+  background-color: #57555e;
+  border: 2px solid black;
 }
 
-.pagination__list >li:nth-child(3) button:nth-child(1){
-    width:1.8rem;
-    height: 1.8rem;
+.pagination__list > li:nth-child(2),
+.pagination__list > li:nth-child(4){
+    font-weight: 900;
+     user-select: none;
 }
 
-.pagination__list >li:nth-child(3) button:nth-child(3){
-    width:2.5rem;
-    height: 2.5rem;
+.pagination__list > li:nth-child(1) button:nth-child(1),
+.pagination__list > li:nth-child(5) button:nth-child(2) {
+  width: 2.5rem;
+  height: 2.5rem;
 }
 
-.pagination__list >li:nth-child(3) button:nth-child(2){
-    background-color: aquamarine;
+.pagination__list > li:nth-child(1) button:nth-child(2),
+.pagination__list > li:nth-child(5) button:nth-child(1) {
+  width: 2rem;
+  height: 2rem;
+}
+
+.pagination__list > li:nth-child(3) button:nth-child(1),
+.pagination__list > li:nth-child(3) button:nth-child(5) {
+  width: 2rem;
+  height: 2rem;
+}
+
+.pagination__list > li:nth-child(3) button:nth-child(2),
+.pagination__list > li:nth-child(3) button:nth-child(4) {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.pagination__list > li:nth-child(3) button:nth-child(3) {
+  width: 3rem;
+  height: 3rem;
+}
+
+.pagination__list > li:nth-child(1) button:nth-child(1):active,
+.pagination__list > li:nth-child(5) button:nth-child(2):active,
+.pagination__list > li:nth-child(1) button:nth-child(2):active,
+.pagination__list > li:nth-child(5) button:nth-child(1):active,
+.pagination__list > li:nth-child(3) button:nth-child(1):active,
+.pagination__list > li:nth-child(3) button:nth-child(5):active,
+.pagination__list > li:nth-child(3) button:nth-child(2):active,
+.pagination__list > li:nth-child(3) button:nth-child(4):active,
+.pagination__list > li:nth-child(3) button:nth-child(3):active {
+  transform: scale(0.8, 0.8);
+  transition: 0.15s;
 }
