--- a/src/styles/LandingPage.css
+++ b/src/styles/LandingPage.css
@@ -1,10 +1,36 @@
+
+.landing__page-photo{
+    width: 100%; 
+}
+
+.landing__page-photo img{
+    width: 100%;
+    height: 800px;
+    z-index: -1;
+    object-fit: cover;
+}
+
+.landing__page-section-searchbar{
+    position: absolute;
+    right: 50%;
+    bottom:50%;
+    background-color: aqua;
+    display:flex;
+}
+
+.simple-select{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .landing__page-card-section{
-    margin: 20px 4rem;
+    margin: 40px 4rem;
 }
 
 .landing__page-card-section-list{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     list-style: none;
 }
 
@@ -46,3 +72,4 @@
     background-color: #554971;
     color:white;
 }
+
