--- a/src/styles/Item.css
+++ b/src/styles/Item.css
@@ -114,7 +114,7 @@ padding-right: 1rem;
   user-select: none;
 }
 
-.item__container-article-main-bigImage-arrowPrev > svg,
+.item__container-article-main-bigImage-arrowPrev > svgcd,
 .item__container-article-main-bigImage-arrowNext> svg {
   transition: all 0.3s ease 0s;
   display: block;
