--- a/src/components/ItemSideArticle.module.css
+++ b/src/components/ItemSideArticle.module.css
@@ -8,134 +8,147 @@
   margin: 1rem 0;
 }
 
-.section_div{
-    background-color: aliceblue;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-
+.section_div {
+  background-color: aliceblue;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
 }
 
-.section_header{
-    border-radius: 5px 5px 0 0;
-    padding: 10px 1rem;
-    background-color:#fff;
+.section_header {
+  border-radius: 5px 5px 0 0;
+  padding: 10px 1rem;
+  background-color: #fff;
 }
 
-.section_header>h2{
-    color: #000;
-    display: flex;
-    justify-content: center;
+.section_header > h2 {
+  color: #000;
+  display: flex;
+  justify-content: center;
 }
 
-.contact{
-    display: flex;
-    position: relative;
+.contact {
+  display: flex;
+  position: relative;
 }
 
-.profilePicture{
-    position: absolute;
-    border-radius: 50%;
-    width: 4rem;
-    height: 4rem;
-    object-fit: cover;
-    top:50%;
-    transform: translateY(-50%);
-}
-
-address{
-    position: relative;
-    left:100px;
-    font-size: 16px;
-    padding: 1rem 0;
-    display: flex;
-    flex-direction: column;
-}
-
-
-.form_container{
-    background-color: #554971;
-    border-radius: 0 0 5px 5px;
-    padding: 10px 1rem;
-}
-
-form{
-    position: relative;
-}
-
-.form_div_wrapper{
-position: relative;
-padding: 0.5rem 0;
-}
-
-.svg{
+.profilePicture {
   position: absolute;
-  box-sizing:border-box;
-  top:50%;
-  left:6px;
+  border-radius: 50%;
+  width: 4rem;
+  height: 4rem;
+  object-fit: cover;
+  top: 50%;
   transform: translateY(-50%);
 }
 
-.inputText{
-    width: 100%;
-    height: 40px;
-    box-sizing:border-box;
-    padding-left: 1.5rem;
-    transition: all 0.3s ease 0s;
+address {
+  position: relative;
+  left: 100px;
+  font-size: 16px;
+  padding: 1rem 0;
+  display: flex;
+  flex-direction: column;
 }
 
-.inputText:focus{
-    outline:#daa520;
+.form_container {
+  background-color: #554971;
+  border-radius: 0 0 5px 5px;
+  padding: 10px 1rem;
 }
 
-.form_additionalContact_wrapper{
-    padding: 10px 0;
+form {
+  position: relative;
 }
 
-.form_additionalContact_wrapper>div{
-    padding: 10px 0;
+.form_div_wrapper {
+  position: relative;
+  padding: 0.5rem 0;
 }
 
-.form_additionalContact_wrapper>div>label{
-    font-size: 16px;
-    color:#fff;
-    padding-left: 10px;
+.svg {
+  position: absolute;
+  box-sizing: border-box;
+  top: 50%;
+  left: 6px;
+  transform: translateY(-50%);
 }
 
-.checkbox{
-    height: 1rem;
-    width: 1rem;
-    appearance: auto;
-    background-color: aqua;
-    vertical-align: middle;
+.inputText {
+  width: 100%;
+  height: 40px;
+  box-sizing: border-box;
+  padding-left: 1.5rem;
+  border-radius: 5px;
+  transition: all 0.3s ease 0s;
+  outline: none;
+}
+.inputText:focus {
+  outline: solid #daa520;
 }
 
-.submit{
-    vertical-align: middle;
-    display: inline-block;
-    width: 100%;
-    padding: 10px 32px;
-    border-radius: 5px;
-    background-color: #8AC6D0;
-    border-style: none;
-    transition: all 0.3s ease 0s;
-    font-weight: bold;
-    color: white;
+textarea {
+  width: 100%;
+  outline: none;
+  transition: all 0.3s ease 0s;
+  border-radius: 5px;
 }
 
-.submit:hover{
-    background-color: #36213e;
-    color: #daa520;
+textarea:focus {
+  outline: solid #daa520;
 }
 
-.form_additionalContact_wrapper p{
-    text-align: center;
-    color:#fff;
+.form_additionalContact_wrapper {
+  padding: 10px 0;
 }
 
-.section_div_credit{
-    margin: 1rem 0;
-    background-color: darkviolet;
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-    padding: 10px 1rem;
+.form_additionalContact_wrapper > div {
+  padding: 10px 0;
+}
+
+.form_additionalContact_wrapper > div > label {
+  font-size: 16px;
+  color: #fff;
+  padding-left: 10px;
+}
+
+.checkbox {
+  height: 1rem;
+  width: 1rem;
+  appearance: auto;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
+label {
+  user-select: none;
+}
+
+.submit {
+  vertical-align: middle;
+  display: inline-block;
+  width: 100%;
+  padding: 10px 32px;
+  border-radius: 5px;
+  background-color: #8ac6d0;
+  border-style: none;
+  transition: all 0.3s ease 0s;
+  font-weight: bold;
+  color: white;
+}
+
+.submit:hover {
+  background-color: #36213e;
+  color: #daa520;
+  box-shadow: 0 0 2px 2px #daa520;
+}
+
+.submit:active {
+  background-color: #051034;
+  color: #daa520;
+  box-shadow: 0 0 2px 8px #daa520;
+}
+
+.form_additionalContact_wrapper p {
+  text-align: center;
+  color: #fff;
 }
