--- a/src/components/NumberSelect.module.css
+++ b/src/components/NumberSelect.module.css
@@ -1,14 +1,14 @@
-.back {
-  background-color: beige;
-}
-
 .container {
   position: relative;
   width: 100%;
 }
 
 .input {
-  background-color: aqua;
+  border:none;
+  background-color: #fff;
+  outline:none;
+  height: 25px;
+  padding-left: 8px;
 }
 
 .list {
@@ -17,7 +17,7 @@
 }
 
 .containter > ul > li {
-  background-color: azure;
+  background-color: #fff;
 }
 
 .list_active {
@@ -25,20 +25,19 @@
   display: block;
   position: absolute;
   width: 100%;
-  background-color: white;
+  background-color: #fff;
   cursor: pointer;
   user-select: none;
+  border-radius: 0 0 5px 5px;
 }
 
 .list_item {
   text-decoration: none;
+  padding: 4px 0 4px 8px;
 }
 
 .list_item_active{
-  text-decoration: underline red;
+  padding: 4px 0 4px 8px;
+  text-decoration: underline #daa520;
   font-weight: 700;
-}
-
-.list_item:nth-child(3){
-  text-decoration: dashed violet;
 }
