--- a/src/components/ItemSideArticle.module.css
+++ b/src/components/ItemSideArticle.module.css
@@ -42,12 +42,14 @@
 }
 
 address {
-  position: relative;
-  left: 100px;
   font-size: 16px;
-  padding: 1rem 0;
+  padding: 0.5rem 0 0.5rem 5rem;
   display: flex;
   flex-direction: column;
+}
+
+address > span {
+  margin: 4px 0;
 }
 
 .form_container {
