--- a/src/styles/Item.module.css
+++ b/src/styles/Item.module.css
@@ -14,7 +14,7 @@
   width: 75%;
 }
 
-.section_photos {
+.section_item {
   width: auto;
   height: auto;
   background-color: #fff;
@@ -22,7 +22,7 @@
   border-radius: 5px;
   margin: 1rem 20px;
 }
-.section_photos_div {
+.section_item_div {
       padding: 0 2rem 0.5rem 2rem;
 }
 /*
@@ -30,15 +30,15 @@
     padding: 0 2rem;
 }
 */
-.section_photos header > div {
+.section_item header > div {
   padding: 0.5rem;
 }
-.section_photos header > div > ul > li {
+.section_item header > div > ul > li {
   display: inline-block;
   padding-right: 2rem;
 }
 
-.section_photos header > div > ul > li > em {
+.section_item header > div > ul > li > em {
   display: block;
 }
 
@@ -59,119 +59,6 @@
 }
 .container_article_main_categories > ul > li:nth-child(3) > span {
   padding-right: 1rem;
-}
-
-.container_article_main_bigImage {
-  height: 518px;
-  background-color: #f5f8fb;
-  border-radius: 5px;
-  position: relative;
-}
-
-.container_article_main_bigImage > img {
-  padding: 1rem 0;
-  object-fit: contain;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  margin: 0 auto;
-  height: 518px;
-}
-
-.container_article_main_bigImage_arrowPrev {
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.container_article_main_bigImage_arrowNext {
-  position: absolute;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.container_article_main_bigImage_arrowPrev,
-.container_article_main_bigImage_arrowNext {
-  width: 2rem;
-  height: 2rem;
-  margin: 10px 10px;
-  border-radius: 50%;
-  border: 2px solid white;
-  background-color: #554971;
-  color: white;
-  transition: all 0.3s ease 0s;
-  vertical-align: middle;
-  font-weight: 600;
-  cursor: pointer;
-  user-select: none;
-  z-index: 1;
-}
-
-.container_article_main_bigImage_arrowPrev > svg,
-.container_article_main_bigImage_arrowNext > svg {
-  transition: all 0.3s ease 0s;
-  display: block;
-  margin: auto;
-  color: white;
-}
-.container_article_main_bigImage_arrowPrev:hover,
-.container_article_main_bigImage_arrowNext:hover {
-  border: 2px solid #daa520;
-}
-
-.container_article_main_bigImage_arrowPrev:hover svg,
-.container_article_main_bigImage_arrowNext:hover svg {
-  color: #daa520;
-}
-
-.container_article_main_bigImage_arrowPrev:active > svg,
-.container_article_main_bigImage_arrowNext:active > svg {
-  transform: scale(1.3, 0.9);
-  transition: 0.15s;
-}
-
-.container_article_main_bigImage_arrowPrev:active,
-.container_article_main_bigImage_arrowNext:active {
-  background-color: #36213e;
-}
-
-.container_article_main_thumbnail {
-  height: 150px;
-  width: 100%;
-  margin: 1rem 0;
-  position: relative;
-  background-color: rgba(245, 248, 251, 1);
-  border-radius: 5px;
-}
-
-.thumbnails {
-  display: flex;
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-.thumbnails > li {
-  width: 142px;
-  height: 100px;
-  cursor: pointer;
-  list-style: none;
-  margin: 0 24px 0 0;
-  background-color: rgba(201, 201, 201, 0.5);
-  position: relative;
-}
-.thumbnails > li > img {
-  object-fit: contain;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  margin: 0 auto;
-  height: 100%;
 }
 
 .section_information {
