--- a/src/components/BigPhotosGallery.module.css
+++ b/src/components/BigPhotosGallery.module.css
@@ -61,7 +61,37 @@
   transition: all 0.3s ease 0s;
   display: block;
   margin: auto;
+  width: 2em;
+  height: 2em;
 }
+
+.bigPhoto_arrowPrev:hover,
+.bigPhoto_arrowNext:hover {
+  border: 2px solid #daa520;
+}
+
+.bigPhoto_arrowPrev:hover svg,
+.bigPhoto_arrowNext:hover svg {
+  color: #daa520;
+}
+
+.bigPhoto_arrowPrev:active > svg,
+.bigPhoto_arrowNext:active > svg {
+  transform: scale(1.3, 0.9);
+  transition: 0.15s;
+}
+
+.bigPhoto_arrowPrev:active,
+.bigPhoto_arrowNext:active {
+  background-color: #36213e;
+}
+.bigPhoto_arrowPrev:disabled,
+.bigPhoto_arrowNext:disabled {
+  background-color: #57555e;
+  border: 2px solid black;
+}
+
+
 .ornament_prev {
   position: absolute;
   left: 0;
@@ -104,6 +134,23 @@
   transition: all 0.3s ease 0s;
   display: block;
   margin: auto;
+    width: 2em;
+  height: 2em;
+}
+
+.buttonExit:hover {
+ box-shadow: 5px 5px  #daa520;
+  transition: all 0.3s ease 0s;
+}
+
+.buttonExit>svg:hover{
+  color:#daa520;
+}
+
+.buttonExit:active{
+  background-color: #051034;
+    transform: scale(0.8, 0.8);
+  transition: 0.05s;
 }
 
 .counter {
@@ -112,4 +159,5 @@
   left: 100px;
   font-size: 40px;
   vertical-align: middle;
+  user-select: none;
 }
