--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -10,13 +10,16 @@
 }
 
 .small-button> svg{
-    vertical-align: middle;
+    display: block;
+    margin: auto;
 }
 .small-button:hover{
     color:#DAA520;
     background-color: #36213e;
 }
 .small-button:active{
+    background-color: #051034;
     transform: scale(0.8, 0.8);
     transition: 0.15s;
+    box-shadow: 0 0 2px 6px #daa520;
 }
