--- a/src/components/UserInterface.module.css
+++ b/src/components/UserInterface.module.css
@@ -1,5 +1,4 @@
 .btn__group {
-  background-color: aqua;
   display: inline-block;
   position: relative;
   width: 300px;
@@ -41,9 +40,21 @@
   background-color: #051034;
 }
 
+.btn1_btn2_Opened {
+  border-radius: 5px 0px 0px 0px;
+  width: 60%;
+}
+
+.btn2_Opened {
+  border-radius: 0px 5px 0px 0px;
+  width: 40%;
+  background-color: #36213e;
+}
+
 .modal {
   display: none;
 }
+
 .modal_Opened {
   display: block;
   height: 300px;
@@ -61,6 +72,10 @@
 }
 .modal_list > li{
   cursor: pointer;
+  padding: 10px 0;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
 }
 .modal_list > li:hover{
     color:#daa520;
