--- a/src/components/UserInterface.module.css
+++ b/src/components/UserInterface.module.css
@@ -76,6 +76,7 @@
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
+  user-select: none;
 }
 .modal_list > li:hover{
     color:#daa520;
