--- a/src/styles/LandingPage.module.css
+++ b/src/styles/LandingPage.module.css
@@ -18,9 +18,8 @@
     object-fit: cover;
 }
 
-.landing__page_section_searchbar{
+.section_searchbar{
     position: absolute;
-    right: 50%;
     bottom:50%;
     background-color: aqua;
     display:flex;
@@ -30,9 +29,45 @@
     border-radius: 5px;
 }
 
-.landing__page_section_searchbar>div{
+.section_searchbar>div{
     background-color: aqua;
-    padding: 0 1rem;
+    margin: 0 1rem;
+}
+
+.form_div_wrapper {
+  position: relative;
+  padding: 0.5rem 0;
+}
+
+.inputText {
+  width: 100%;
+  height: 40px;
+  box-sizing: border-box;
+  padding-left: 1.5rem;
+  border-radius: 5px;
+  transition: all 0.3s ease 0s;
+  outline: none;
+}
+
+.svg {
+  position: absolute;
+  box-sizing: border-box;
+  top: 50%;
+  left: 6px;
+  transform: translateY(-50%);
+}
+
+.number_select{
+    width: 300px;
+}
+
+.number_select>label{
+    display: inline-block;
+}
+
+.number_select>div{
+    display: flex;
+    width: 100%;
 }
 
 
