--- a/src/components/NumberSelect.module.css
+++ b/src/components/NumberSelect.module.css
@@ -48,3 +48,9 @@
   text-decoration: underline #daa520;
   font-weight: 700;
 }
+
+.checkMark{
+  vertical-align: middle;
+  position:absolute; 
+  right:0;
+}
