--- a/src/components/ListItem.module.css
+++ b/src/components/ListItem.module.css
@@ -3,7 +3,7 @@
     display:grid;
     padding: 24px 24px;
     width: 800px;
-    height: 250px;
+    height: 270px;
     margin:10px;
     border-radius: 16px;
     box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.2);
@@ -26,6 +26,13 @@
 .listing__photos{
     grid-column: 1;
     background-color: azure;
+    width: 260px;
+    height: 220px;
+}
+.listing__photos>img{
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
 }
 
 .listing__section_price{
