--- a/src/styles/LandingPage.module.css
+++ b/src/styles/LandingPage.module.css
@@ -1,37 +1,38 @@
-
-*{
-    font-family: 'Montserrat', sans-serif;
+* {
+  font-family: "Montserrat", sans-serif;
 }
 
-#root{
-  background-color:#f5f8fb;
+#root {
+  background-color: #f5f8fb;
 }
 
-.landing__page_photo{
-    width: 100%; 
+.landing__page_photo {
+  width: 100%;
 }
 
-.landing__page_photo img{
-    width: 100%;
-    height: 800px;
-    z-index: -1;
-    object-fit: cover;
+.landing__page_photo img {
+  width: 100%;
+  height: 800px;
+  z-index: -1;
+  object-fit: cover;
 }
 
-.section_searchbar{
-    position: absolute;
-    bottom:50%;
-    background-color: aqua;
-    display:flex;
-    height: 4rem;
-    align-items: center;
-    background-color:rgba(99, 118, 141, 1);
-    border-radius: 5px;
+.section_searchbar {
+  position: absolute;
+  width: 80%;
+  bottom: 50%;
+  left: 10%;
+  display: flex;
+  height: 4rem;
+  align-items: center;
+  background-color: rgba(99, 118, 141, 1);
+  border-radius: 5px;
 }
 
-.section_searchbar>div{
-    background-color: aqua;
-    margin: 0 1rem;
+.section_searchbar > div {
+  background-color: #554971;
+  margin: 0 1rem;
+  color:white;
 }
 
 .form_div_wrapper {
@@ -57,26 +58,25 @@
   transform: translateY(-50%);
 }
 
-.number_select{
-    width: 300px;
+.number_select {
+  width: 300px;
 }
 
-.number_select>label{
-    display: inline-block;
+.number_select > label {
+  display: inline-block;
 }
 
-.number_select>div{
-    display: flex;
-    width: 100%;
+.number_select > div {
+  display: flex;
+  width: 100%;
 }
 
-
-.landing__page_card_section{
-    margin: 40px 4rem;
+.landing__page_card_section {
+  margin: 40px 4rem;
 }
 
-.landing__page_card_section_list{
-    display: flex;
-    justify-content: space-evenly;
-    list-style: none;
+.landing__page_card_section_list {
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
 }
