--- a/src/components/UserInterface.module.css
+++ b/src/components/UserInterface.module.css
@@ -51,11 +51,17 @@
   background-color: #36213e;
 }
 
-.modal {
-  display: none;
+.modal_btn1_Opened {
+    display: block;
+  height: 300px;
+  background-color: #36213e;
+  border-radius: 0 0 10px 10px;
+  width: 100%;
+  position: absolute;
+  z-index: 1000;
 }
 
-.modal_Opened {
+.modal_btn2_Opened {
   display: block;
   height: 300px;
   background-color: #36213e;
