--- a/src/components/UserInterface.module.css
+++ b/src/components/UserInterface.module.css
@@ -14,21 +14,21 @@
   padding: 10px 32px;
   color: white;
   background-color: #554971;
-  transition: all 0.3s ease 0s;
+  transition: all 0.1s ease 0s;
   overflow: hidden;
 }
 
-.btn1 {
+.btnBig {
   border-radius: 5px 0px 0px 5px;
   width: 60%;
 }
-.btn2 {
+.btnSmall {
   border-radius: 0px 5px 5px 0px;
   width: 40%;
 }
 
-.btn>svg{
-    margin: auto;
+.btn > svg {
+  margin: auto;
 }
 
 .btn:hover {
@@ -40,30 +40,31 @@
   background-color: #051034;
 }
 
-.btn1_btn2_Opened {
+.btnBig_btnSmall_Opened {
   border-radius: 5px 0px 0px 0px;
   width: 60%;
 }
 
-.btn2_Opened {
+.btnBig_Opened_btnSmall {
+  border-radius: 0px 5px 0px 0px;
+  width: 40%;
+}
+
+.btnBig_Opened {
+  border-radius: 5px 0px 0px 0px;
+  width: 60%;
+  background-color: #36213e;
+}
+
+.btnSmall_Opened {
   border-radius: 0px 5px 0px 0px;
   width: 40%;
   background-color: #36213e;
 }
 
-.modal_btn1_Opened {
-    display: block;
-  height: 300px;
-  background-color: #36213e;
-  border-radius: 0 0 10px 10px;
-  width: 100%;
-  position: absolute;
-  z-index: 1000;
-}
-
-.modal_btn2_Opened {
+.menu_btnBig_Opened {
   display: block;
-  height: 300px;
+  height: 320px;
   background-color: #36213e;
   border-radius: 0 0 10px 10px;
   width: 100%;
@@ -71,12 +72,22 @@
   z-index: 1000;
 }
 
-.modal_list{
-    color:white;
-    list-style: none;
-    text-align: center;
+.menu_btnSmall_Opened {
+  display: block;
+  height: 320px;
+  background-color: #36213e;
+  border-radius: 0 0 10px 10px;
+  width: 100%;
+  position: absolute;
+  z-index: 1000;
 }
-.modal_list > li{
+
+.menu_list {
+  color: white;
+  list-style: none;
+  text-align: center;
+}
+.menu_list > li {
   cursor: pointer;
   padding: 10px 0;
   display: flex;
@@ -84,9 +95,88 @@
   align-items: center;
   user-select: none;
 }
-.modal_list > li:hover{
-    color:#daa520;
-    transition: all 0.3s ease 0s;
+.menu_list > li:hover {
+  color: #daa520;
+  transition: all 0.3s ease 0s;
+}
+.form {
+  padding: 0.5rem;
+  color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-/*(!e.target) ?  setIsOpened((isOpened) => !isOpened): null*/
+.form_div_wrapper {
+  position: relative;
+  margin: 0 0 10px 0;
+  text-align: center;
+}
+
+.form_div_label {
+  display: block;
+  padding: 5px 0px;
+  font-size: 16px;
+}
+
+.inputText {
+  width: 280px;
+  height: 40px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  transition: all 0.3s ease 0s;
+  outline: none;
+}
+
+.inputText:focus {
+  outline: solid #daa520;
+}
+
+.submit {
+  vertical-align: middle;
+  display: inline-block;
+  width: 100%;
+  padding: 10px 32px;
+  border-radius: 5px;
+  background-color: #8ac6d0;
+  border-style: none;
+  transition: all 0.3s ease 0s;
+  font-weight: bold;
+  color: white;
+}
+
+.submit:hover {
+  background-color: #554971;
+  color: #daa520;
+  box-shadow: 0 0 2px 2px #daa520;
+}
+
+.submit:active {
+  background-color: #051034;
+  color: #daa520;
+  box-shadow: 0 0 2px 8px #daa520;
+}
+
+.form > p {
+  margin: 10px 0;
+  font-size: 16px;
+  user-select: none;
+  cursor: pointer;
+}
+
+.form_div_actions {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  user-select: none;
+}
+
+.form_div_actions>p:first-child {
+  font-size: 16px;
+}
+.form_div_actions>p:last-child {
+  font-weight: bolder;
+  margin: 10px 0;
+  cursor:pointer;
+}
