--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,24 +1,30 @@
-.small-button{
-    border: none;
-    border-radius: 5px;
-    background-color: #554971;
-    color:#fff;
-    transition: all 0.3s ease 0s;
-    width:40px;
-    height: 40px;
-    cursor: pointer;
-        display: flex;
-    justify-content: center;
-    align-items: center;
+.small-button {
+  border: none;
+  border-radius: 5px;
+  background-color: #554971;
+  color: #fff;
+  transition: all 0.3s ease 0s;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.small-button:hover{
-    color:#DAA520;
-    background-color: #36213e;
+.small-button:hover {
+  color: #daa520;
+  background-color: #36213e;
 }
-.small-button:active{
-    background-color: #051034;
-    transform: scale(0.8, 0.8);
-    transition: 0.15s;
-    box-shadow: 0 0 2px 6px #daa520;
+.small-button:active {
+  background-color: #051034;
+  transform: scale(0.8, 0.8);
+  transition: 0.15s;
+  box-shadow: 0 0 2px 6px #daa520;
+}
+
+.small-button:disabled {
+  background-color: #57555e;
+  border: 2px solid black;
+  box-shadow: 0 0 2px 6px #daa520;
 }
