--- a/src/components/List.module.css
+++ b/src/components/List.module.css
@@ -8,6 +8,9 @@
   align-items: center;
   background-color: #554971;
 }
+.section__options>div{
+  margin:0 10px;
+}
 
 .list__container {
   background-color: rgba(184, 243, 255, 0.9);
