--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -1,11 +1,15 @@
 .nav {
-  position: relative;
+  position: fixed;
   width: 100%;
+  height: 100px;
+   top: 0;
+  left: 0;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   padding: 10px 10%;
   background-color: rgba(99, 118, 141, 1);
+  z-index: 10;
 }
 
 .logo {
