--- a/src/components/SearchForm.module.css
+++ b/src/components/SearchForm.module.css
@@ -1,9 +1,13 @@
 .search__form{
-  position: relative;
+  position: fixed;
+  top:100px;
+  height: 100px;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #8ac6d0;
+  z-index: 0;
   
 }
 
