--- a/src/components/UserInterface.module.css
+++ b/src/components/UserInterface.module.css
@@ -69,7 +69,6 @@
   border-radius: 0 0 10px 10px;
   width: 100%;
   position: absolute;
-  z-index: 1000;
 }
 
 .menu_btnSmall_Opened {
@@ -79,21 +78,23 @@
   border-radius: 0 0 10px 10px;
   width: 100%;
   position: absolute;
-  z-index: 1000;
 }
 
 .menu_list {
   color: white;
   list-style: none;
   text-align: center;
+  height: 100%;
 }
 .menu_list > li {
   cursor: pointer;
   padding: 10px 0;
   display: flex;
   flex-direction: column-reverse;
+  height: 25%;
   align-items: center;
   user-select: none;
+  justify-content: center;
 }
 .menu_list > li:hover {
   color: #daa520;
@@ -172,11 +173,11 @@
   user-select: none;
 }
 
-.form_div_actions>p:first-child {
+.form_div_actions > p:first-child {
   font-size: 16px;
 }
-.form_div_actions>p:last-child {
+.form_div_actions > p:last-child {
   font-weight: bolder;
   margin: 10px 0;
-  cursor:pointer;
+  cursor: pointer;
 }
