--- a/src/components/CreateForm/CreateForm.module.css
+++ b/src/components/CreateForm/CreateForm.module.css
@@ -11,6 +11,7 @@
 .section_panel {
   background-color: aquamarine;
   width: 50%;
+  padding: 1.25rem 0;
 }
 
 .section_transaction {
@@ -25,7 +26,7 @@
   width: 80%;
   height: 100px;
   display: flex;
-  justify-content:space-around;
+  justify-content: space-around;
   align-items: center;
   background-color: aqua;
   border-radius: 5px;
@@ -41,7 +42,9 @@
   align-items: center;
   user-select: none;
   color: #fff;
+  cursor: pointer;
 }
+
 .section_transaction_container:hover {
   color: #daa520;
 }
@@ -94,6 +97,22 @@
   color: #fff;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease 0s;
+  cursor: pointer;
+}
+.panel_active {
+  color: #daa520;
+  width: 244px;
+  height: 244px;
+  background-color: #554971;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
 }
 .panel:hover {
   color: #daa520;
@@ -106,5 +125,19 @@
 }
 
 .panel_input {
-  visibility: inherit;
+  visibility: hidden;
+}
+.section_details {
+  background-color: burlywood;
+  width: 50%;
+}
+
+.errorParagraph {
+  color: #fff;
+  font-size: 16px;
+  text-align: center;
+  overflow: hidden;
+  background-color: #000000;
+  border-radius: 5px;
+  padding: 5px;
 }
