--- a/src/components/CreateForm/CreateFormContactDetails.module.css
+++ b/src/components/CreateForm/CreateFormContactDetails.module.css
@@ -1,6 +1,50 @@
-.article{
-width: 100%;
-background-color: tomato;
-border-radius: 5px;
-padding: 1rem 2rem;
+.article {
+  width: 100%;
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 1rem 2rem;
+  box-shadow: 2px 2px 2px 2px rgb(0 0 0 / 20%);
+}
+
+.article_section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section_inputContainer {
+  padding: 10px;
+  width: 300px;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input {
+  width: 100%;
+  height: 40px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  transition: all 0.3s ease 0s;
+  outline: none;
+  text-align: center;
+}
+.input:focus {
+  outline: solid #daa520;
+}
+
+.section_inputContainer > label {
+  padding: 5px 0;
+}
+
+.errorParagraph {
+  color: #fff;
+  font-size: 16px;
+  text-align: center;
+  overflow: hidden;
+  background-color: #000000;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 10px 0 0 0;
 }
