--- a/src/components/SignUp.module.css
+++ b/src/components/SignUp.module.css
@@ -22,6 +22,7 @@
   border-radius: 5px;
   background-color: #554971;
   padding: 1.25rem;
+  box-shadow: 2px 2px 2px 2px rgb(0 0 0 / 20%);
 }
 
 .form_div_wrapper {
