--- a/src/components/CreateForm/CreateFormContactDetails.module.css
+++ b/src/components/CreateForm/CreateFormContactDetails.module.css
@@ -48,3 +48,64 @@
   padding: 5px;
   margin: 10px 0 0 0;
 }
+
+.errorSvg{
+  position: absolute;
+    width: 30px;
+    height: 30px;
+    left: 110%;
+    top: 50%;
+    color: #ED4F32;
+}
+
+.negotiation_wrapper{
+    padding: 5px;
+}
+
+.section_negotiation_container {
+  background-color: #554971;
+  height: 40px;
+  width: 280px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  user-select: none;
+  color: #fff;
+  cursor: pointer;
+}
+
+.section_negotiation_container:checked {
+  color: #daa520;
+}
+
+.section_negotiation_container > input {
+  display: none;
+}
+
+.section_negotiation_container > input:checked + .custom_checkmark {
+  display: inline-block;
+  border-radius: 50%;
+  display: inline-block;
+  transition: opacity 0.3s ease;
+  background-color: #daa520;
+}
+
+.custom_checkmark {
+  width: 20px;
+  height: 20px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  margin-left: 20px;
+}
+
+.negotiation_description{
+  padding: 5px;
+  width: 300px;
+}
+
+.negotiation_description>p{
+  font-size: 16px;
+  text-align: justify;
+  user-select: none;
+}
