--- a/src/styles/LandingPage.module.css
+++ b/src/styles/LandingPage.module.css
@@ -23,7 +23,7 @@
   bottom: 50%;
   left: 10%;
   display: flex;
-  height: 4rem;
+  height: 100px;
   align-items: center;
   background-color: rgba(99, 118, 141, 1);
   border-radius: 5px;
