--- a/src/components/CreateForm/CreateFormContactDetails.module.css
+++ b/src/components/CreateForm/CreateFormContactDetails.module.css
@@ -4,6 +4,7 @@
   border-radius: 5px;
   padding: 1rem 2rem;
   box-shadow: 2px 2px 2px 2px rgb(0 0 0 / 20%);
+  margin: 10px 0 10px 0;
 }
 
 .article_section {
